syntax = "proto3";

option csharp_namespace = "GrpcPublisherServiceApp";

package publisher;

service Publisher {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
}

////CreatePost
message CreatePostRequest{
  bytes image = 1;
  string content = 2;
}
message CreatePostResponse{ }
////